Fix small spacing around GitHub Button

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ iframe {
     border: none;
     overflow: hidden;
     background-color: transparent;
+    padding-top: 4px;
 }
 
 /* ------ Animation settings ------ */
